SubBt/force-app/main/default/objects/Proposal_Images__c/Proposal_Images__c.object-meta.xml
<CustomObject>
    <label>Quote Images</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Quote Images Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>