SubBt/force-app/main/default/objects/Proposal_Images__c/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>