SubBt/force-app/main/default/objects/Proposal_Images__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Proposal_Images</relationshipName>
    <type>Lookup</type>
</CustomField>