SubBt/force-app/main/default/objects/Proposal_Images__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Contract Images</relationshipLabel>
    <relationshipName>Proposal_Images</relationshipName>
    <type>Lookup</type>
</CustomField>