SubBt/force-app/main/default/objects/Proposal_Images__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Quote Images</relationshipLabel>
    <relationshipName>Proposal_Images</relationshipName>
    <type>Lookup</type>
</CustomField>