SubBt/force-app/main/default/objects/Proposal_Images__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Proposal__c</columns>
    <columns>Contract__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Image__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>